forms-flow-eforms-integrations/infra/test/service_dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: forms-flow-eforms-integrations-svc
  namespace: forms-flow-eforms-integrations
  labels:
    app.kubernetes.io/name: integrations
spec:
  selector:
    app.kubernetes.io/name: integrations
  ports:
    - name: forms-flow-eforms-integrations-port
      protocol: TCP
      port: 8002
      targetPort: 8002
